--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ ul {
   position: fixed;
   top: 0;
   width: 100%;
-  overflow: auto;
+  
 }
 
 .dropdown-item {
@@ -304,7 +304,7 @@ form .btn:hover, form .btn:active {
 }
 
 .big .card-outer {
-  background: #FE4A49;
+  background: grey;
 }
 
 
@@ -419,11 +419,13 @@ form .btn:hover, form .btn:active {
   }
 }
 
+/* #F5D547 */
 .card-icon{
-  color: black;
+  color: #333138;
   border-radius: 10px 2px 0px 0px;
   margin: 0px;
   height: 100%;
+  filter: drop-shadow(5px 5px 20px #000);
 }
 
 .Subscribe {
@@ -572,10 +574,13 @@ footer {
 }
 
 #x {
-  float: left;
-  margin-left: 10px;
-  margin-top: 10px;
+
+  z-index: 10001;
   color: #FF312E;
+  position: sticky;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .jumbotron {
