changes to hz scroll

--- a/style.css
+++ b/style.css
@@ -610,7 +610,10 @@ footer {
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
+  }
 
+  .project-card {
+    display: inline-block;
   }
 
   .order-img {
