--- a/style.css
+++ b/style.css
@@ -606,14 +606,9 @@ footer {
 
 
   .project-section {
-    display: inline-block;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-  }
+    overflow-y: scroll;
+    height: 500px;
 
-  .project-card {
-    display: inline-block;
   }
 
   .order-img {
