--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body, html {
   height: 100%;
   font-family: 'Roboto', serif !important;
-
+  line-height: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -345,7 +345,7 @@ form .btn:hover, form .btn:active {
 }
 
 #resp img {
-  float: right;
+  float: none;
   margin: 2px;
   width: 100%;
   max-width: 200px;
@@ -404,7 +404,7 @@ form .btn:hover, form .btn:active {
   background-color: #fff;
 }
 
-.over:hover {
+.over:hover, .over:active {
   opacity: 1;
 }
 
