--- a/style.css
+++ b/style.css
@@ -331,6 +331,24 @@ form .btn:hover, form .btn:active {
   margin: 40px;
 }
 
+.xtr-cont {
+  margin: 40px;
+  content: "";
+  display: table;
+  clear: both;
+  background-color: white;
+  color: black;
+  border-radius: 15px 5px 15px 5px;
+  -webkit-box-shadow: 10px 10px 9px 3px rgba(0,0,0,0.69);
+  -moz-box-shadow: 10px 10px 9px 3px rgba(0,0,0,0.69);
+  box-shadow: 10px 10px 9px 3px rgba(0,0,0,0.69);
+}
+
+.xtr-col {
+  float: left;
+  padding: 10px;
+}
+
 .car {
   margin: 30px;
 }
@@ -344,13 +362,18 @@ form .btn:hover, form .btn:active {
   height: 350px;
 }
 
-#resp img {
-  float: none;
-  margin: 2px;
-  width: 100%;
-  max-width: 200px;
-  height: auto;
+.san-img {
+  width: 25%;
+}
 
+.san-img img {
+  margin-top: 50%;
+  width: 100%;
+  height: auto;
+}
+
+.resp {
+  width: 75%;
 }
 
 .project-section {
@@ -523,6 +546,7 @@ form .btn:hover, form .btn:active {
 }
 
 .cont p {
+
   position: absolute;
   top: 50%;
   left: 50%;
@@ -550,8 +574,9 @@ form .btn:hover, form .btn:active {
   margin: auto auto;
   font-size: 16px;
   line-height: 26px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
+  border-radius: 5px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 
@@ -735,5 +760,9 @@ footer {
 
   .Subscribe {
     height: 420px;
+  }
+
+  .xtr-col {
+    width: 100%;
   }
 }
