--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ form .btn:hover, form .btn:active {
   content: "";
   display: table;
   clear: both;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.5)
   color: black;
   border-radius: 15px 5px 15px 5px;
   -webkit-box-shadow: 10px 10px 9px 3px rgba(0,0,0,0.69);
@@ -363,7 +363,7 @@ form .btn:hover, form .btn:active {
 }
 
 .san-img {
-  width: 25%;
+  width: 35%;
 }
 
 .san-img img {
@@ -374,7 +374,7 @@ form .btn:hover, form .btn:active {
 }
 
 .resp {
-  width: 75%;
+  width: 65%;
 }
 
 .project-section {
@@ -560,7 +560,7 @@ form .btn:hover, form .btn:active {
 
 .inner-cv {
   text-align: center;
-  background-image: url(imgs/cov2.png);
+
   background-size: cover;
   background-color: white;
   border-radius: 5px;
@@ -576,8 +576,8 @@ form .btn:hover, form .btn:active {
   font-size: 16px;
   line-height: 26px;
   border-radius: 5px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
+
 }
 
 
