--- a/style.css
+++ b/style.css
@@ -391,8 +391,9 @@ form .btn:hover, form .btn:active {
 }
 
 .project-card h4 {
-  margin-bottom: 10px;
+  margin-bottom: 60%;
 }
+
 .project-card {
   position: relative;
   min-height: 200px;
