--- a/style.css
+++ b/style.css
@@ -23,6 +23,27 @@ a:hover {
   color: inherit;
 }
 
+.prod_img {
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 15px 5px 15px 5px;
+  height: 100px;
+  width: auto;
+  -webkit-box-shadow: 10px 10px 24px 2px rgba(0,0,0,0.68);
+  -moz-box-shadow: 10px 10px 24px 2px rgba(0,0,0,0.68);
+  box-shadow: 10px 10px 24px 2px rgba(0,0,0,0.68);
+  transition: 0.2s;
+}
+
+.prod_img:hover {
+  border-radius: 10px 2px 10px 2px;
+  height: 105px;
+  width: auto;
+  -webkit-box-shadow: 10px 10px 24px 4px rgba(0,0,0,1);
+  -moz-box-shadow: 10px 10px 24px 4px rgba(0,0,0,1);
+  box-shadow: 10px 10px 24px 4px rgba(0,0,0,1);
+}
+
 hr {
   max-width: 300px;
 }
