--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+.prod_img {
+  margin: 20px;
+}
+
 .fas {
   margin-top: 90%;
   -webkit-animation: pulse 2s ease-in;
